test/parser/bad/_custom/interface_method_body.java
protected interface InterfaceMethodBody {
    public void m() {}
}
